3.10.5/_sources/gallery/scales/index.rst.txt


.. _sphx_glr_gallery_scales:

.. _scales_examples:

Scales
======

These examples cover how different scales are handled in Matplotlib.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Illustrate the scale transformations applied to axes, e.g. log, symlog, logit.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_scales_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_scales.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scales overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Illustration of the asinh &lt;.scale.AsinhScale&gt; axis scaling, which uses the transformation">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_asinh_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_asinh_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Asinh scale</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Loglog aspect">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_aspect_loglog_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_aspect_loglog.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loglog aspect</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Custom scales can be created in two ways">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_custom_scale_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_custom_scale.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom scale</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Examples of plots with logarithmic axes.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_log_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_log_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Log scale</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Examples of plots with logit axes.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_logit_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_logit_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Logit scale</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Various normalization on a multivariate normal distribution.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_power_norm_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_power_norm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exploring normalizations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The symmetric logarithmic scale is an extension of the logarithmic scale that also covers negative values. As with the logarithmic scale, it is particularly useful for numerical data that spans a broad range of values, especially when there are significant differences between the magnitudes of the numbers involved.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_symlog_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scales_symlog_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Symlog scale</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/scales/scales
   /gallery/scales/asinh_demo
   /gallery/scales/aspect_loglog
   /gallery/scales/custom_scale
   /gallery/scales/log_demo
   /gallery/scales/logit_demo
   /gallery/scales/power_norm
   /gallery/scales/symlog_demo

